MAINTAINERCLEANFILES = Makefile.in

SUBDIRS =

if USE_MODULE_IBAR
SUBDIRS += ibar
endif

if USE_MODULE_DROPSHADOW
SUBDIRS += dropshadow
endif

if USE_MODULE_CLOCK
SUBDIRS += clock
endif

if USE_MODULE_PAGER
SUBDIRS += pager
endif

if USE_MODULE_BATTERY
SUBDIRS += battery
endif

if USE_MODULE_TEMPERATURE
SUBDIRS += temperature
endif

if USE_MODULE_NOTIFICATION
SUBDIRS += notification
endif

if USE_MODULE_CPUFREQ
SUBDIRS += cpufreq
endif

if USE_MODULE_IBOX
SUBDIRS += ibox
endif

if USE_MODULE_START
SUBDIRS += start
endif

if USE_MODULE_WINLIST
SUBDIRS += winlist
endif

if USE_MODULE_FILEMAN
SUBDIRS += fileman
endif

if USE_MODULE_FILEMAN_OPINFO
SUBDIRS += fileman_opinfo
endif

if USE_MODULE_WIZARD
SUBDIRS += wizard
endif

if USE_MODULE_CONF
SUBDIRS += conf
endif

if USE_MODULE_CONF_WALLPAPER2
SUBDIRS += conf_wallpaper2
endif

if USE_MODULE_CONF_THEME
SUBDIRS += conf_theme
endif

if USE_MODULE_CONF_INTL
SUBDIRS += conf_intl
endif

if USE_MODULE_MSGBUS
SUBDIRS += msgbus
endif

if USE_MODULE_CONF_APPLICATIONS
SUBDIRS += conf_applications
endif

if USE_MODULE_CONF_DISPLAY
SUBDIRS += conf_display
endif

if USE_MODULE_CONF_SHELVES
SUBDIRS += conf_shelves
endif

if USE_MODULE_CONF_KEYBINDINGS
SUBDIRS += conf_keybindings
endif

if USE_MODULE_CONF_EDGEBINDINGS
SUBDIRS += conf_edgebindings
endif

if USE_MODULE_CONF_WINDOW_REMEMBERS
SUBDIRS += conf_window_remembers
endif

if USE_MODULE_CONF_WINDOW_MANIPULATION
SUBDIRS += conf_window_manipulation
endif

if USE_MODULE_CONF_MENUS
SUBDIRS += conf_menus
endif

if USE_MODULE_CONF_DIALOGS
SUBDIRS += conf_dialogs
endif

if USE_MODULE_CONF_PERFORMANCE
SUBDIRS += conf_performance
endif

if USE_MODULE_CONF_PATHS
SUBDIRS += conf_paths
endif

if USE_MODULE_CONF_INTERACTION
SUBDIRS += conf_interaction
endif

if USE_MODULE_GADMAN
SUBDIRS += gadman
endif

if USE_MODULE_MIXER
SUBDIRS += mixer
endif

if USE_MODULE_CONNMAN
SUBDIRS += connman
endif

if USE_MODULE_BLUEZ
SUBDIRS += bluez
endif

if USE_MODULE_ILLUME2
SUBDIRS += \
        illume2 \
        illume-home \
        illume-home-toggle \
        illume-softkey \
        illume-keyboard \
        illume-indicator \
        illume-kbd-toggle \
        illume-mode-toggle \
        illume-bluetooth
endif

if USE_MODULE_SYSCON
SUBDIRS += syscon
endif

if USE_MODULE_EVERYTHING
SUBDIRS += everything
endif

if USE_MODULE_SYSTRAY
SUBDIRS += systray
endif

if USE_MODULE_COMP
SUBDIRS += comp
endif

if USE_MODULE_OFONO
SUBDIRS += ofono
endif

if USE_MODULE_SHOT
SUBDIRS += shot
endif

if USE_MODULE_BACKLIGHT
SUBDIRS += backlight
endif
