MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
e_0.png \
e_glow_0.png \
power_button_0.png \
power_button_glow_0.png \
reset_button_0.png \
reset_button_glow_0.png \
theme_0.png \
theme_glow_0.png \
windows.png \
module.png \
favorites.png \
desktop.png \
gadget.png \
configuration.png \
run.png
